Add index.html and recipes/kielbasa-and-pierogies.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
         <meta charset="utf-8">
@@ -9,10 +9,13 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
+        <p></p>
+        <p>This is your one stop shop for polish recipes.</p>
+        <p>If you're trying to lose weight, hit the back button on 
+            your browser...</p> <p>But if you're OK with a sturdy dad/mom bod, proceed to the 
+            links below for some hearty meals to get you there :)</p>
+        <a href="recipes/kielbasa-and-pierogies.html">Kielbasa & Pierogies</a>
     </body>
-
-
 
 
 </html>
