Add 2 recipes in the form of subpages to homepage

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <p></p>
-        <p>This is your one stop shop for polish recipes.</p>
+        <p>Here you will find some recipes from my heritage.</p>
         <p>If you're trying to lose weight, hit the back button on 
-            your browser...</p> <p>But if you're OK with a sturdy dad/mom bod, proceed to the 
+            your browser...</p> 
+        <p>But if you're OK with a sturdy dad/mom bod, proceed to the 
             links below for some hearty meals to get you there :)</p>
         <a href="recipes/kielbasa-and-pierogies.html">Kielbasa & Pierogies</a>
+        <p></p>
+        <a href="recipes/corned-beef-boxty.html">Corned Beef Boxty</a>
     </body>
 
 
