--- a/recipes/kielbasa-and-pierogies.html
+++ b/recipes/kielbasa-and-pierogies.html
@@ -6,7 +6,41 @@
     </head>
 
     <body>
-        <h1>Kielbasa & Pierogies</h1>
+        <h1>Kielbasa & Pierogies:</h1>
+        <p><h3><em>A Polish-American Staple</em></h3></p>
+        <img src="/home/brinko/repos/odin-recipes/pics/recipe1.jpg" alt="Pan Fried Keilbasa and Pierogies">
+        <h2>Pan seared Kielbasa and Pierogies with butter and onions</h2>
+        <p>This is a classic polish dish known to satisfy even the hungriest of bellies.
+            Pierogies are essentially pasta dumplings filled with potatoes, cheese, sauerkraut, a combination of the three, or other creative fillings.
+            For example, click <a href="https://youtu.be/fZV6AQTZAB0">here</a> for an excellent buffalo chicken style pierogie recipe.
+
+        </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>25 frozen pierogies (Mrs. T's or local polish deli)</li>
+            <li>1 lb Kielbasa or smoked sausage (any flavor)</li>
+            <li>5 tbs butter (what would we do without it?)</li>
+            <li>1 yellow onion (or sweet onion)</li>
+        </ul>
+
+        <h2>Instructions</h2>
+
+        <ol>
+            <li>Add 2 tbsp of butter to large skillet over medium heat</li>
+            <li>Add defrosted pierogies and saute until golden brown</li>
+            <li>Remove pierogies, set aside and cover</li>
+            <li>Add 1 more tbsp of butter, and chopped kielbasa into pan. Cook until browned.</li>
+            <li>Add 2 tbsp butter, plus chopped onion. Saute until texture is nice and soft.</li>
+            <li>Add pierogies back in, cook on low while stirring periodically. Serve hot!</li>
+        </ol>
+
+        <p><a href="/home/brinko/repos/odin-recipes/index.html">Return Home</a></p>
+        <p><a href="/home/brinko/repos/odin-recipes/recipes/kielbasa-and-pierogies.html">Back to Top</a></p>
+
+        <p>Questions/Comments: trentbrinko@gmail.com</p>
+        <h3>Thanks for reading!</h3>
+        
     </body>
 
 
