Finalizd 3 recipes with back links and resized headings

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <a href="recipes/kielbasa-and-pierogies.html">Kielbasa & Pierogies</a>
         <p></p>
         <a href="recipes/corned-beef-boxty.html">Corned Beef Boxty</a>
+        <p></p>
+        <a href="recipes/penne-alla-vodka.html">Penne Alla Vodka</a>
+        <p></p>
+        <img src="/home/brinko/repos/odin-recipes/pics/manmeat.jpg" alt="man meat by Michael Scott">
+        <h5>Michael Scott, of NBC's 'The Office', serving 'man meat'.</h5>
+        <h6>All Inquiries: trentbrinko@gmail.com</h6>
     </body>
 
 
