--- a/recipes/kielbasa-and-pierogies.html
+++ b/recipes/kielbasa-and-pierogies.html
@@ -11,12 +11,11 @@
         <img src="/home/brinko/repos/odin-recipes/pics/recipe1.jpg" alt="Pan Fried Keilbasa and Pierogies">
         <h2>Pan seared Kielbasa and Pierogies with butter and onions</h2>
         <p>This is a classic polish dish known to satisfy even the hungriest of bellies.
-            Pierogies are essentially pasta dumplings filled with potatoes, cheese, sauerkraut, a combination of the three, or other creative fillings.
-            For example, click <a href="https://youtu.be/fZV6AQTZAB0">here</a> for an excellent buffalo chicken style pierogie recipe.
+            Pierogies are essentially pasta dumplings filled with potatoes, cheese, sauerkraut, a combination of the three, or other creative fillings.</p>
+            
+        <p>For example, click <a href="https://youtu.be/fZV6AQTZAB0">here</a> for an excellent buffalo chicken style pierogie recipe.</p>
 
-        </p>
-
-        <h2>Ingredients</h2>
+        <h3>Ingredients</h3>
         <ul>
             <li>25 frozen pierogies (Mrs. T's or local polish deli)</li>
             <li>1 lb Kielbasa or smoked sausage (any flavor)</li>
@@ -24,7 +23,7 @@
             <li>1 yellow onion (or sweet onion)</li>
         </ul>
 
-        <h2>Instructions</h2>
+        <h3>Instructions</h3>
 
         <ol>
             <li>Add 2 tbsp of butter to large skillet over medium heat</li>
