--- a/recipes/corned-beef-boxty.html
+++ b/recipes/corned-beef-boxty.html
@@ -12,8 +12,8 @@
         <img src="/home/brinko/repos/odin-recipes/pics/corned-beef-boxty.jpg" alt="Irish Corned Beef Boxty">
         <h2>Potato pancake stuffed with mouth watering corned beef, swiss cheese and thousand island dressing.</h2>
         <p>This traditional Irish dish is a nice hearty meal to celebrate St. Patrick's Day or any day! A simple and quick recipe, corned beef boxty will leave your belly and heart full! The buttery potato pancake combined with the salty and savory corned beef will leave you drooling next time you think of a Leperchaun!</p>
-        <p></p>
-        <h2>Ingredients:</h2>
+        <p>Check it out <a href="https://youtu.be/Oi29aIkQe5I">here!</a></p>
+        <h3>Ingredients:</h3>
         <ul>
             <li>2 Cups mashed potatoes</li>
             <li>Horseradish</li>
@@ -27,13 +27,17 @@
             <li>Thousand Island Dressing</li>
         </ul>
         <p></p>
-        <h2>Steps:</h2>
+        <h3>Steps:</h3>
         <ol>
             <li>Mix large portion of mashed potatoes in large bowl</li>
             <li>Grate 2 cups of dry russet potatoes and add to bowl(idk what those are)</li>
             <li>Stir in flour, baking powder, salt and pepper and mix</li>
             <li>Once pancake-like consistency is formed, add to oiled skillet </li>
         </ol>
+        <ul>
+            <li><a href="/home/brinko/repos/odin-recipes/index.html">Back Home</a></li>
+            <li><a href="/home/brinko/repos/odin-recipes/recipes/corned-beef-boxty.html">Top of Page</a></li>
+        </ul>
 
     </body>
 </html>
